// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateMetricTypeDeclarations — snapshot > emits TimeGrain<K> union for a metric view with time-typed + regular dimensions 1`] = `
"// Auto-generated by AppKit - DO NOT EDIT
// Generated by 'npx @databricks/appkit generate-types' or Vite plugin during build
import "@databricks/appkit-ui/react";
declare module "@databricks/appkit-ui/react" {
  interface MetricRegistry {
    "revenue": {
      key: "revenue";
      source: "appkit_demo.public.revenue_metrics_v2";
      lane: "sp";
      measures: {
      /** @sqlType DECIMAL(38,2) */
      "arr": number;
    };
      dimensions: {
      /** @sqlType TIMESTAMP @timeGrain day|hour|minute|month|quarter|week|year */
      "created_at": string;
      /** @sqlType STRING */
      "region": string;
      /** @sqlType STRING */
      "segment": string;
    };
      measureKeys: "arr";
      dimensionKeys: "created_at" | "region" | "segment";
      timeGrains: "day" | "hour" | "minute" | "month" | "quarter" | "week" | "year";
      metadata: {
        measures: {
      "arr": {
        type: "DECIMAL(38,2)";
        description: "Annual recurring revenue";
      };
    };
        dimensions: {
      "created_at": {
        type: "TIMESTAMP";
        time_grain: readonly ["day", "hour", "minute", "month", "quarter", "week", "year"];
      };
      "region": {
        type: "STRING";
      };
      "segment": {
        type: "STRING";
      };
    };
      };
    };
  }
}
"
`;

exports[`generateMetricTypeDeclarations — snapshot > emits a stable MetricRegistry augmentation for a mixed sp + obo input 1`] = `
"// Auto-generated by AppKit - DO NOT EDIT
// Generated by 'npx @databricks/appkit generate-types' or Vite plugin during build
import "@databricks/appkit-ui/react";
declare module "@databricks/appkit-ui/react" {
  interface MetricRegistry {
    "customer_metrics": {
      key: "customer_metrics";
      source: "appkit_demo.public.customer_metrics";
      lane: "obo";
      measures: {
      /** @sqlType DOUBLE */
      "churn_rate": number;
    };
      dimensions: {
      /** @sqlType STRING */
      "csm_email": string;
      /** @sqlType DATE @timeGrain day|month|quarter|week|year */
      "billing_date": string;
    };
      measureKeys: "churn_rate";
      dimensionKeys: "csm_email" | "billing_date";
      timeGrains: "day" | "month" | "quarter" | "week" | "year";
      metadata: {
        measures: {
      "churn_rate": {
        type: "DOUBLE";
        display_name: "Churn Rate";
        format: "0.0%";
      };
    };
        dimensions: {
      "csm_email": {
        type: "STRING";
      };
      "billing_date": {
        type: "DATE";
        time_grain: readonly ["day", "month", "quarter", "week", "year"];
      };
    };
      };
    };
    "revenue": {
      key: "revenue";
      source: "appkit_demo.public.revenue_metrics";
      lane: "sp";
      measures: {
      /** @sqlType DECIMAL(38,2) */
      "arr": number;
      /** @sqlType DECIMAL(38,2) */
      "mrr": number;
    };
      dimensions: {
      /** @sqlType STRING */
      "region": string;
      /** @sqlType TIMESTAMP @timeGrain day|hour|minute|month|quarter|week|year */
      "created_at": string;
    };
      measureKeys: "arr" | "mrr";
      dimensionKeys: "region" | "created_at";
      timeGrains: "day" | "hour" | "minute" | "month" | "quarter" | "week" | "year";
      metadata: {
        measures: {
      "arr": {
        type: "DECIMAL(38,2)";
        display_name: "Annual Recurring Revenue";
        format: "$#,##0.00";
        description: "Annual recurring revenue";
      };
      "mrr": {
        type: "DECIMAL(38,2)";
        description: "Monthly recurring revenue";
      };
    };
        dimensions: {
      "region": {
        type: "STRING";
      };
      "created_at": {
        type: "TIMESTAMP";
        time_grain: readonly ["day", "hour", "minute", "month", "quarter", "week", "year"];
      };
    };
      };
    };
  }
}
"
`;

exports[`generateMetricTypeDeclarations — snapshot > emits an empty MetricRegistry interface when no metrics are registered 1`] = `
"// Auto-generated by AppKit - DO NOT EDIT
// Generated by 'npx @databricks/appkit generate-types' or Vite plugin during build
import "@databricks/appkit-ui/react";
declare module "@databricks/appkit-ui/react" {
  interface MetricRegistry {}
}
"
`;

exports[`generateMetricTypeDeclarations — snapshot > emits permissive types for a degraded entry and accurate empty unions for a confirmed-empty entry 1`] = `
"// Auto-generated by AppKit - DO NOT EDIT
// Generated by 'npx @databricks/appkit generate-types' or Vite plugin during build
import "@databricks/appkit-ui/react";
declare module "@databricks/appkit-ui/react" {
  interface MetricRegistry {
    /** Degraded: schema unavailable at type-generation time — permissive types until a successful DESCRIBE refreshes them. */
    "cold_metric": {
      key: "cold_metric";
      source: "appkit_demo.public.cold_metric";
      lane: "sp";
      measures: Record<string, unknown>;
      dimensions: Record<string, unknown>;
      measureKeys: string;
      dimensionKeys: string;
      timeGrains: string;
      metadata: {
        measures: Record<string, never>;
        dimensions: Record<string, never>;
      };
    };
    "dims_only": {
      key: "dims_only";
      source: "appkit_demo.public.dims_only";
      lane: "obo";
      measures: Record<string, never>;
      dimensions: {
      /** @sqlType STRING */
      "region": string;
    };
      measureKeys: never;
      dimensionKeys: "region";
      timeGrains: never;
      metadata: {
        measures: Record<string, never>;
        dimensions: {
      "region": {
        type: "STRING";
      };
    };
      };
    };
  }
}
"
`;

exports[`generateMetricsMetadataJson — snapshot > serializes a representative metric view with display_name + format + time_grain 1`] = `
"{
  "customer_metrics": {
    "measures": {
      "churn_rate": {
        "type": "DOUBLE",
        "display_name": "Churn Rate",
        "format": "0.0%"
      }
    },
    "dimensions": {
      "csm_email": {
        "type": "STRING",
        "display_name": "CSM Email"
      }
    }
  },
  "revenue": {
    "measures": {
      "arr": {
        "type": "DECIMAL(38,2)",
        "display_name": "Annual Recurring Revenue",
        "format": "$#,##0.00",
        "description": "ARR per quarter"
      },
      "growth_rate": {
        "type": "DOUBLE",
        "display_name": "Growth Rate",
        "format": "0.0%"
      }
    },
    "dimensions": {
      "region": {
        "type": "STRING",
        "display_name": "Region"
      },
      "created_at": {
        "type": "TIMESTAMP",
        "display_name": "Period",
        "time_grain": [
          "day",
          "hour",
          "minute",
          "month",
          "quarter",
          "week",
          "year"
        ]
      }
    }
  }
}
"
`;
